<resources>
    <!-- Activity name -->
    <string name="app_name">LxzhFunctionTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quick_mark">QuickMark</string>
    <string name="title_activity_send_mail">SendEmail</string>
    <string name="title_activity_xml_save_data">XmlSaveData</string>
    <string name="title_activity_xml_save_data_next">XmlSaveDataNext</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_filebrowser">FileBrowser</string>
    <string name="title_activity_record">Record</string>
    <string name="title_activity_record2">Record2</string>
    <string name="title_activity_inputmethod">InputMethod</string>
    <string name="title_activity_ftp">FTP</string>
    <string name="notification">click to view</string>
    <string name="title_activity_bcreceiver">LxzhBCReceiver</string>
    <string name="title_activity_sort">LxzhSortAlgo</string>
    <string name="title_activity_find">LxzhFindAlgo</string>
    <string name="title_activity_process">ProcessTest</string>
    <string name="title_activity_socket">SocketDemo</string>
    <string name="title_activity_unsafe">UseUnsafe</string>
    <string name="title_activity_rxjava">RxJavaDemo</string>
    <string name="title_activity_leakcanray">LeakCanary</string>
    <string name="title_activity_webview">WebView</string>
    <string name="title_activity_jni">Jni</string>
    <string name="title_activity_remoteres">RemoteRes</string>

    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="about">About</string>
    <string name="tips">Tips</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="start">Start</string>
    <string name="connect">Connect</string>
    <string name="disconnect">DisConnect</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <!-- Activity——quickmark -->
    <string name="activity_quickmark_genbrcode">Generate BRCode</string>
    <string name="activity_quickmark_transparent">Tansparent Background</string>
    <string name="activity_quickmark_save">Save BRCode</string>

    <!-- Activity——sendemail -->
    <string name="activity_sendemail_username">UserName</string>
    <string name="activity_sendemail_password">Password</string>
    <string name="activity_sendemail_sendaddr">Send</string>
    <string name="activity_sendemail_toaddr">To</string>
    <string name="activity_sendemail_test_username">leijf9262@163.com</string>
    <string name="activity_sendemail_test_sendaddr">leijf9262@163.com</string>
    <string name="activity_sendemail_test_toaddr">1239848066@qq.com</string>

    <!-- Activity——sort -->
    <string name="activity_sort_gen">generate random data</string>
    <string name="activity_sort_sort">Sort</string>
    <string name="activity_sort_bubblesort">BubbleSort</string>
    <string name="activity_sort_insertsort">InsertSort</string>
    <string name="activity_sort_selectsort">SelectSort</string>
    <string name="activity_sort_shellsort">ShellSort</string>
    <string name="activity_sort_heapsort">HeapSort</string>
    <string name="activity_sort_mergesort">MergeSort</string>
    <string name="activity_sort_quicksort">QuickSort</string>

    <!-- Activity——find -->
    <string name="activity_find_gen">generate random data</string>
    <string name="activity_find_find">Sort</string>

    <!-- Activity——socket -->
    <string name="msgsend">MSGSEND</string>
    <string name="msgrecv">MSGRECV</string>

    <!-- Activity——RemoteRes-->
    <string name="load_installed_apk_res">Load installed apk Resource</string>
    <string name="load_uninstalled_apk_res">Load uninstalled apk Resource</string>

</resources>
