<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/activity_sendemail_username"
        android:singleLine="true"
        android:text="@string/activity_sendemail_test_username"
        android:textColor="@android:color/black"
        android:textSize="28dp" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserName"
        android:hint="@string/activity_sendemail_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="28dp" />
    <EditText
        android:id="@+id/etSendAddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:hint="@string/activity_sendemail_sendaddr"
        android:singleLine="true"
        android:text="@string/activity_sendemail_test_sendaddr"
        android:textColor="@android:color/black"
        android:textSize="28dp" />
    <EditText
        android:id="@+id/etToAddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSendAddr"
        android:hint="@string/activity_sendemail_toaddr"
        android:singleLine="true"
        android:text="@string/activity_sendemail_test_toaddr"
        android:textColor="@android:color/black"
        android:textSize="28dp" />
    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etToAddr"
        android:hint="@string/title"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="28dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/send" />

    <EditText
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_above="@id/send"
        android:hint="@string/content"
        android:textColor="@android:color/black"
        android:gravity="left|top"
        android:textSize="28dp" />

</RelativeLayout>